--- a/README.Rmd
+++ b/README.Rmd
@@ -78,4 +78,4 @@ You should have received a copy of the GNU General Public License along with thi
 
 [2] Lambert, P. (2021). Moment-based density and risk estimation from grouped summary statistics. [*arXiv:2107.03883*](https://arxiv.org/abs/2107.03883)
 
-[3] Lambert, P. (2021) R-package *ordgam* - [R-cran](https://CRAN.R-project.org/package=degross) ; GitHub: [plambertULiege/degross](https://github.com/plambertULiege/degross)
+[3] Lambert, P. (2021) R-package *degross* (**D**ensity **E**stimation from **GR**ouped **S**ummary **S**tatistics)- [R-cran](https://CRAN.R-project.org/package=degross) ; GitHub: [plambertULiege/degross](https://github.com/plambertULiege/degross)
